--- a/src/css/app.styl
+++ b/src/css/app.styl
@@ -73,7 +73,7 @@ footer,
     }
 }
 
-.text-area-oxen {
+.text-area-lozzax {
   margin-top: 0px;
   margin-bottom: 0px;
 }
@@ -102,7 +102,7 @@ footer,
 
 .q-layout, .app-content {
     background: white;
-    color:$oxen-navy;
+    color:$lozzax-navy;
 }
 
 .q-header {
@@ -139,7 +139,7 @@ footer,
     }
 
     .q-toolbar-inverted {
-        background: $oxen-navy;
+        background: $lozzax-navy;
         padding-top: 0;
     }
 
@@ -197,20 +197,20 @@ footer,
         .text {
             font-size: 14px;
             margin-top: 8px;
-            color: $oxen-navy;
+            color: $lozzax-navy;
         }
 
         .value {
             font-size: 24px;
             margin-top: 4px;
             font-weight: 300;
-            color: $oxen-navy;
+            color: $lozzax-navy;
         }
     }
 }
 
 .q-checkbox {
-    color: $oxen-navy    
+    color: $lozzax-navy    
 }
 
 .q-loading + .modal {
@@ -224,7 +224,7 @@ footer,
 }
 
 .q-footer.status-footer {
-    background: $oxen-navy;
+    background: $lozzax-navy;
     color: rgba(255, 255, 255, 0.51);
     border-top: 1px solid #333;
     padding-top: 2px;
@@ -320,10 +320,10 @@ footer,
     .q-item.tx-snode,
     .q-item.tx-gov {
         .amount span {
-            color: $oxen-navy;
+            color: $lozzax-navy;
             &:before {
                 content: "+";
-                color: $oxen-navy;
+                color: $lozzax-navy;
             }
         }
     }
@@ -366,10 +366,10 @@ footer,
 
 .q-menu {
     background: white;
-    color: $oxen-navy !important;
+    color: $lozzax-navy !important;
 
     * {
-        color: $oxen-navy;
+        color: $lozzax-navy;
     }
 
     .q-list-separator > .q-item-division + .q-item-division, .q-item-division + .q-separator {
@@ -382,7 +382,7 @@ footer,
     background: white;
 
     .q-item * {
-        color: $oxen-navy;
+        color: $lozzax-navy;
     }
 }
 
@@ -395,7 +395,7 @@ footer,
   width: 450px;
   max-width: 450x;
 
-  color: $oxen-navy !important;
+  color: $lozzax-navy !important;
 
   .confirm-list {
     .q-item {
@@ -408,7 +408,7 @@ footer,
   }
 
   .label {
-    color: $oxen-purple;
+    color: $lozzax-purple;
     padding-right: 6px;
   }
   .address-value {
@@ -462,21 +462,21 @@ footer,
 }
 
 .q-toolbar {
-    background-color: $oxen-navy;
+    background-color: $lozzax-navy;
 }
 
 .header {
-    color: $oxen-navy;
+    color: $lozzax-navy;
 }
 
 .detail-page {
-    color: $oxen-navy;
+    color: $lozzax-navy;
 }
 
 .q-radio {
-    color: $oxen-navy;
+    color: $lozzax-navy;
     svg {
-        color: $oxen-navy;
+        color: $lozzax-navy;
     }
 }
 
@@ -489,26 +489,26 @@ footer,
   }
 }
 
-.oxen-light-teal {
-    background: $oxen-light-teal;
+.lozzax-light-teal {
+    background: $lozzax-light-teal;
     color: white;
 }
 
-.oxen-navy {
-    background: $oxen-navy;
+.lozzax-navy {
+    background: $lozzax-navy;
     color: white;
 }
 
-.oxen-teal {
-    background: $oxen-teal;
+.lozzax-teal {
+    background: $lozzax-teal;
     color: white;
 }
 
 .startup-icons {
     .solid {
-        color:$oxen-teal;
+        color:$lozzax-teal;
         g,path {
-            fill: $oxen-teal;
+            fill: $lozzax-teal;
         }
     }
 }
@@ -521,20 +521,20 @@ footer,
 
 .navigation {
     .q-btn {
-        background: $oxen-navy;
+        background: $lozzax-navy;
         color: white;
         
         .q-icon {
-            color: $oxen-teal;
+            color: $lozzax-teal;
         }
     }
 
     .router-link-exact-active > .q-btn {
-        color: $oxen-navy
-        background: $oxen-teal;
+        color: $lozzax-navy
+        background: $lozzax-teal;
 
         .q-icon {
-            color: $oxen-navy;
+            color: $lozzax-navy;
         }
     }
 
@@ -551,22 +551,22 @@ footer,
     }
 
     .q-item {
-        background: $oxen-navy;
+        background: $lozzax-navy;
         .wallet-icon {
-            color: $oxen-teal;
+            color: $lozzax-teal;
             g,path {
-                fill: $oxen-teal;
+                fill: $lozzax-teal;
             }
         }
     }
 
     .q-item:hover, .q-item.selected {
-        background: $oxen-purple !important;
+        background: $lozzax-purple !important;
 
         .wallet-icon {
-            color: $oxen-teal;
+            color: $lozzax-teal;
             g,path {
-                fill: $oxen-teal;
+                fill: $lozzax-teal;
             }
         }
 
@@ -578,14 +578,14 @@ footer,
 
 .wallet-settings {
   .q-btn {
-    color: $oxen-navy;
+    color: $lozzax-navy;
   }
 }
 
 .receive {
 
     .list-header {
-        color: $oxen-navy;
+        color: $lozzax-navy;
     }
 
     .q-separator-component {
@@ -594,7 +594,7 @@ footer,
     }
 
     .primary-address {
-        background: $oxen-teal !important;
+        background: $lozzax-teal !important;
         border: none !important;
 
         .q-item, .q-item-side {
@@ -616,31 +616,31 @@ footer,
 
 }
 
-.oxen-list {
-    .oxen-list-item {
+.lozzax-list {
+    .lozzax-list-item {
         background: white;
         -webkit-transition: background-color 0.2s ease-in;
         transition: background-color 0.2s ease-in;
 
         font-size: 16px;
-        color: $oxen-navy;
+        color: $lozzax-navy;
         padding-top: 6px;
         padding-bottom: 6px;
 
         margin: 0 16px;
-        border: 1px solid $oxen-navy;
+        border: 1px solid $lozzax-navy;
         border-radius: 4px;
 
-        + .oxen-list-item {
+        + .lozzax-list-item {
             margin-top: 10px;
         }
     }
 
     .text-caption {
-        color: $oxen-navy;
+        color: $lozzax-navy;
     }
 
-    .oxen-list-item:hover {
+    .lozzax-list-item:hover {
         background: $off-grey;
         cursor: pointer;
 
@@ -652,7 +652,7 @@ footer,
   font-weight: bold;
   margin-bottom: 40px;
   padding-bottom: 40px;
-  color: $oxen-navy;
+  color: $lozzax-navy;
 }
 
 .records-group {
@@ -662,12 +662,12 @@ footer,
 .service-node-list {
     .q-item {
         cursor: pointer;
-        color: $oxen-navy;
+        color: $lozzax-navy;
         background: white;
         -webkit-transition: background-color 0.2s ease-in;
         transition: background-color 0.2s ease-in;
 
-        border: 1px solid $oxen-navy;
+        border: 1px solid $lozzax-navy;
         border-radius: 4px;
 
         + .q-item {
@@ -675,16 +675,16 @@ footer,
         }
 
         .contrib-amounts {
-            color: $oxen-navy;
+            color: $lozzax-navy;
         }
     }
     
     .q-item-label {
-        color: $oxen-navy;
+        color: $lozzax-navy;
     }
 
     .fee {
-        color: $oxen-navy;
+        color: $lozzax-navy;
     }
 
     .q-item:hover {
@@ -700,15 +700,15 @@ footer,
 .ons-record-list {
   .q-item {
     cursor: pointer;
-    color: $oxen-navy;
+    color: $lozzax-navy;
     -webkit-transition: background-color 0.2s ease-in;
     transition: background-color 0.2s ease-in;
 
-    border: 1px solid $oxen-navy;
+    border: 1px solid $lozzax-navy;
     border-radius: 4px;
 
     .height {
-      color: $oxen-navy;
+      color: $lozzax-navy;
     }
 
     // we don't want to select button text (also a span) as well
@@ -739,15 +739,15 @@ footer,
 }
 
 .tab-desc {
-    color: $oxen-navy;
+    color: $lozzax-navy;
     font-style: normal;
     b {
-        color: $oxen-teal;
+        color: $lozzax-teal;
         font-style: italic;
     }
 }
 
-.oxen-field {
+.lozzax-field {
     .content {
         border: 1px solid #484848;
         background: white;
@@ -772,7 +772,7 @@ footer,
     }
 
     .label {
-        color: $oxen-navy;
+        color: $lozzax-navy;
 
         .optional {
             color: #7C7C7C;
@@ -787,7 +787,7 @@ footer,
 }
 
 .welcome-container {
-    color: $oxen-navy;
+    color: $lozzax-navy;
 }
 
 .address-book, .address-header {
@@ -806,7 +806,7 @@ footer,
 }
 
 .signature-dialog {
-    color: $oxen-navy;    
+    color: $lozzax-navy;    
 }
 
 .check-transaction {
@@ -840,7 +840,7 @@ footer,
 }
 
 .created {
-    color: $oxen-navy;
+    color: $lozzax-navy;
     
   .wallet h6 {
     text-align: center;
