--- a/src/css/themes/common.variables.styl
+++ b/src/css/themes/common.variables.styl
@@ -26,9 +26,9 @@
 
 // $loki-green = linear-gradient(180deg, #419B41 0%, #43BD43 100%)
 
-// $oxen-navy = #1F1C47;
-// $oxen-teal = #12C7BA;
-// $oxen-light-teal = #DBF7F5;
+// $lozzax-navy = #1F1C47;
+// $lozzax-teal = #12C7BA;
+// $lozzax-light-teal = #DBF7F5;
 
 // $loki-black-90 = #0A0A0A
 // $loki-black-80 = #252525
